chore: scrub local identifiers from blueprint

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -8,7 +8,7 @@ host_key_checking = False
 retry_files_enabled = False
 timeout = 30
 vault_password_file = .vault_pass
-local_tmp = /home/mrjmriii/src/security-ops-blueprint/.ansible/tmp
+local_tmp = ~/.ansible/tmp
 
 [ssh_connection]
-ssh_args = -F /home/mrjmriii/.ssh/config
+ssh_args = -F ~/.ssh/config
