--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -4,7 +4,7 @@ all:
       hosts:
         ctl-laptop:
           ansible_connection: local
-          ansible_user: mrjmriii
+          ansible_user: operator
 
     hypervisor:
       hosts:
